Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61547

RenderCapture not reading from correct framebuffer

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.2
    • 5.9.0
    • Qt3D
    • None

    Description

      When using a RenderCapture within a RenderTargetSelector, the RenderCapture should read back from the FBO's color attachment 0 instead of reading from the back buffer directly.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lemire_p Paul Lemire
            lemire_p Paul Lemire
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes